2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: new algorithm to calculate relation
	* src/plugins/all_relations.py: begin of quick report to show extended relationship.

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_GalleryTab.py: correctly update displaytab

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py: xml load/save not working, fixed #1319

2007-10-22  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_MenuOptions.py: Refactored options, GEPS #005

2007-10-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: select first/last marriage for maiden name

2007-10-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: during rebuild, don't do select change
	* src/DisplayTabs/_NoteTab.py: connect db note changes so tab updates
	* src/DisplayTabs/_ButtonTab.py: avoid double call of selection_change
	* src/DisplayTabs/_GrampsTab.py: method to add db connects, and set connects
	* src/Editors/_EditPrimary.py: on add tab pass db connection method
	* src/Editors/_EditSecondary.py: on add tab pass db connection method
	* src/Editors/_EditReference.py: on add tab pass db connection method

2007-10-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: If a family changes, rebuild family backref of all 
	open editors. issue #1309, causing corrupt database.
	Also remove unneeded associations rebuild when family changes

2007-10-20  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_BareReportDialog.py:
	* src/plugins/WebCal.py:
	* src/plugins/NarrativeWeb.py:
	* src/plugins/FamilyLines.py:
	* src/ReportBase/_ReportDialog.py:
	Remove unused funtions setup_output_notebook and setup_post_process from
	the ReportDialog class.

2007-10-20  Brian Matherly <brian@gramps-project.org>
	* src/plugins/BookReport.py: Get book report working again.